<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circle_rectangle"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/yellow_light"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8月15日"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/tv_order_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_count"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/tv_total_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_amt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/order_id" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/tv_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/shop_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_order_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/order_amt" />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_look_sign"
            android:padding="8dp"
            android:text="查看签名"
            android:textColor="@color/white"
            android:visibility="gone"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>