<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frxs_gray_light"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_title_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="80dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/icon_logo" />

        <com.frxs.delivery.widget.ClearEditText
            android:id="@+id/cet_pwd_old"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/circle_frame_border"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password_old"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/frxs_black_light"
            android:textColorHint="@color/frxs_gray_dark"
            android:textSize="16sp" />

        <com.frxs.delivery.widget.ClearEditText
            android:id="@+id/cet_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle_frame_border"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password_new"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/frxs_black_light"
            android:textColorHint="@color/frxs_gray_dark"
            android:textSize="16sp" />

        <com.frxs.delivery.widget.ClearEditText
            android:id="@+id/cet_pwd_new_sure"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle_frame_border"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password_new_sure"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/frxs_black_light"
            android:textColorHint="@color/frxs_gray_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_update_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/red_round_corner_rectangle"
            android:padding="10dp"
            android:text="@string/btn_commit_psw"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
