<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99232323">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/update_dialog_bg"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <!-- 升级标题 -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/update_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/frxs_blue"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/frxs_blue" />

        <!-- 升级内容 -->

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/update_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>

        <!--升级操作-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/update_id_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:focusable="true"
                android:gravity="center"
                android:background="@color/frxs_blue"
                android:padding="10dp"
                android:text="@string/update_ok"
                android:textColor="@drawable/selector_text_white" />

            <TextView
                android:id="@+id/update_id_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:focusable="true"
                android:background="@color/frxs_gray_dark"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/update_cancel"
                android:textColor="@drawable/selector_text_gray" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
